issuw #63: spartanized idomaticTest.java