@@ -40,7 +40,7 @@ import static fluent.ly.idiomatic.*;
     @Test public void katchingNoException() {
       azzert.that(katching(new Producer<@Nullable Integer>() {
         @Override @NotNull public Integer λ() throws Exception {
-          return new Integer(10);
+          return Integer.valueOf(10);
         }
       }), is(Integer.valueOf(10)));
     }
